fix: disable card light on mobile

--- a/src/index.less
+++ b/src/index.less
@@ -787,7 +787,7 @@ svg {
 
 @media (hover: none) {
   .product-card {
-    --card-light-opacity: 0.44;
+    --card-light-opacity: 0;
     --card-x: 82%;
     --card-y: 18%;
   }
